syntax = "proto3";

package fitglue;

option go_package = "github.com/ripixel/fitglue-server/src/go/pkg/types/pb";

import "google/protobuf/timestamp.proto";
import "standardized_activity.proto";

// ActivitySource enum defines where the data originated.
enum ActivitySource {
  SOURCE_UNKNOWN = 0;
  SOURCE_HEVY = 1;
  SOURCE_FITBIT = 3;
  SOURCE_TEST = 99;
}

// ActivityPayload is the unified message format published to Pub/Sub.
message ActivityPayload {
  ActivitySource source = 1;
  string user_id = 2;      // Internal FitGlue User ID
  google.protobuf.Timestamp timestamp = 3;
  string original_payload_json = 4; // Raw JSON payload stringified (flexible but preserved)
  map<string, string> metadata = 5; // Extra tracing context
  StandardizedActivity standardized_activity = 6;

  // Execution tracing
  optional string pipeline_execution_id = 7;
}


